--- a/Flight Visualizer 1.1.html
+++ b/Flight Visualizer 1.1.html
@@ -896,7 +896,7 @@ airplane3d.position.set(xPos, yPos, zPos);
   while (headingDiff < -180) headingDiff += 360;
   
  const yaw = Math.PI/2 - THREE.MathUtils.degToRad(headingDiff);
-const pitch = THREE.MathUtils.degToRad(d.pitch);
+const pitch = THREE.MathUtils.degToRad(-d.pitch);
 const roll = THREE.MathUtils.degToRad(d.roll);
 
 // Правильная последовательность: сначала Roll, потом Pitch, потом Yaw
